tests-integration/fixtures/checking/089_derive_ord_1/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Id :: forall (@a :: Type). (a :: Type) -> Id (a :: Type)
Wrap ::
  forall (t3 :: Type) (@f :: (t3 :: Type) -> Type) (@a :: (t3 :: Type)).
    (f :: (t3 :: Type) -> Type) (a :: (t3 :: Type)) ->
    Wrap @(t3 :: Type) (f :: (t3 :: Type) -> Type) (a :: (t3 :: Type))
Compose ::
  forall (t8 :: Type) (t7 :: Type) (@f :: (t8 :: Type) -> Type) (@g :: (t7 :: Type) -> (t8 :: Type))
    (@a :: (t7 :: Type)).
    (f :: (t8 :: Type) -> Type) ((g :: (t7 :: Type) -> (t8 :: Type)) (a :: (t7 :: Type))) ->
    Compose @(t8 :: Type) @(t7 :: Type)
      (f :: (t8 :: Type) -> Type)
      (g :: (t7 :: Type) -> (t8 :: Type))
      (a :: (t7 :: Type))
NoOrd :: forall (@a :: Type). (a :: Type) -> NoOrd (a :: Type)

Types
Id :: Type -> Type
Wrap :: forall (t3 :: Type). ((t3 :: Type) -> Type) -> (t3 :: Type) -> Type
Compose ::
  forall (t8 :: Type) (t7 :: Type).
    ((t8 :: Type) -> Type) -> ((t7 :: Type) -> (t8 :: Type)) -> (t7 :: Type) -> Type
NoOrd :: Type -> Type

Derived
derive forall (t10 :: Type). Eq (t10 :: Type) => Eq (Id (t10 :: Type))
derive Eq1 Id
derive forall (t12 :: Type). Ord (t12 :: Type) => Ord (Id (t12 :: Type))
derive Ord1 Id
derive forall (t14 :: Type -> Type) (t15 :: Type).
  Eq1 (t14 :: Type -> Type) =>
  Eq (t15 :: Type) =>
  Eq (Wrap @Type (t14 :: Type -> Type) (t15 :: Type))
derive forall (t18 :: Type -> Type). Eq1 (t18 :: Type -> Type) => Eq1 (Wrap @Type (t18 :: Type -> Type))
derive forall (t20 :: Type -> Type) (t21 :: Type).
  Ord1 (t20 :: Type -> Type) =>
  Ord (t21 :: Type) =>
  Ord (Wrap @Type (t20 :: Type -> Type) (t21 :: Type))
derive forall (t24 :: Type -> Type). Ord1 (t24 :: Type -> Type) => Ord1 (Wrap @Type (t24 :: Type -> Type))
derive forall (t26 :: Type -> Type) (t29 :: Type) (t27 :: (t29 :: Type) -> Type) (t28 :: (t29 :: Type)).
  Eq1 (t26 :: Type -> Type) =>
  Eq ((t27 :: (t29 :: Type) -> Type) (t28 :: (t29 :: Type))) =>
  Eq
    (Compose @Type @(t29 :: Type)
      (t26 :: Type -> Type)
      (t27 :: (t29 :: Type) -> Type)
      (t28 :: (t29 :: Type)))
derive forall (t34 :: Type -> Type) (t37 :: Type) (t35 :: (t37 :: Type) -> Type) (t36 :: (t37 :: Type)).
  Ord1 (t34 :: Type -> Type) =>
  Ord ((t35 :: (t37 :: Type) -> Type) (t36 :: (t37 :: Type))) =>
  Ord
    (Compose @Type @(t37 :: Type)
      (t34 :: Type -> Type)
      (t35 :: (t37 :: Type) -> Type)
      (t36 :: (t37 :: Type)))
derive forall (t42 :: Type -> Type) (t43 :: Type -> Type).
  Eq1 (t42 :: Type -> Type) => Eq1 (Compose @Type @Type (t42 :: Type -> Type) (t43 :: Type -> Type))
derive forall (t46 :: Type -> Type) (t47 :: Type -> Type).
  Ord1 (t46 :: Type -> Type) =>
  Ord1 (Compose @Type @Type (t46 :: Type -> Type) (t47 :: Type -> Type))
derive forall (t50 :: Type). Eq (t50 :: Type) => Eq (NoOrd (t50 :: Type))
derive Eq1 NoOrd
derive Ord1 NoOrd

Roles
Id = [Representational]
Wrap = [Representational, Nominal]
Compose = [Representational, Representational, Nominal]
NoOrd = [Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Eq ((t43 :: Type -> Type) (t56 :: Type))
  --> 25:1..25:43
   |
25 | derive instance Eq1 f => Eq1 (Compose f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Ord ((t47 :: Type -> Type) (t57 :: Type))
  --> 26:1..26:45
   |
26 | derive instance Ord1 f => Ord1 (Compose f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Ord (NoOrd (t59 :: Type))
  --> 32:1..32:27
   |
32 | derive instance Ord1 NoOrd
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~
